<resources>
    <string name="app_name">Mayorista Distribuidor</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyC7z5WzB_knjxrQTtKxH670dg-OA1Id67M
    </string>
    <string name="default_notification_channel_id">Notificación Pedidos</string>
    <string name="pedido_total">Total: </string>
    <string name="pedido_simbolo_moneda">S/. </string>
    <string name="closebutton">Boton para cerrar la Aplicacion</string>
    <string name="opass">Ocultar password</string>
    <string name="vpass">Ver password</string>
    <string name="registered_emailid">Ingreso el correo con el que creo la cuenta</string>
    <string name="email">Email</string>
    <string name="submit">ENVIAR</string>
    <string name="tengo_c_digo">TENGO CÓDIGO</string>
    <string name="cambiando_contrase_a">Cambiando contraseña</string>
    <string name="celular">Celular</string>
    <string name="location">Dirección</string>
    <string name="company_id">ID Empresa</string>
    <string name="passowrd">Contraseña</string>
    <string name="confirmPassword">Confirma contraseña</string>
    <string name="terms_conditions">Acepto los</string>
    <string name="terms_conditions2"> <u>terminos y condiciones</u> </string>
    <string name="signUp">Crear Cuenta</string>
    <string name="already_user">Ya tengo una cuenta</string>
    <string name="olvide_mi_contra">¿Olvidaste tu contraseña?</string>
    <string name="login_contra">Contraseña</string>
    <string name="login_correo">Correo</string>
    <string name="login_btn_entrar">ENTRAR</string>
    <string name="img_logo">Logo mayorista</string>
</resources>